fix: set maximum service duration to 480 minutes and added spacing in Edit Service

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -920,6 +920,7 @@ textarea.modalBoxStyles {
 .serviceModalPriceAndDurationFields {
 	display: flex;
 	justify-content: space-between;
+	gap: 0.5rem;
 }
 
 .servicePriceAndDurationModalInputs {
